--- a/.prettierrc
+++ b/.prettierrc
@@ -5,7 +5,7 @@
   "bracketSpacing": true,
   "semi": true,
   "singleQuote": true,
-  "jsxSingleQuote": true,
+  "jsxSingleQuote": false,
   "endOfLine": "lf",
   "trailingComma": "es5",
   "quoteProps": "as-needed",
