--- a/api/package.json
+++ b/api/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --experimental-specifier-resolution=node ./index.js"
+    "start": "node --experimental-specifier-resolution=node ./index.js",
+    "dev": "nodemon --experimental-specifier-resolution=node ./index.js"
   },
   "author": "",
   "license": "ISC",
