--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-  "cSpell.words": ["bgcolor", "datepicker", "uuidv"]
+  "cSpell.words": [
+    "bgcolor",
+    "datepicker",
+    "uuidv"
+  ]
 }
