--- a/api/package.json
+++ b/api/package.json
@@ -18,6 +18,7 @@
     "express-mongo-sanitize": "^2.2.0",
     "mongoose": "^6.2.9",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "pfc-form-builder": "file:.."
   }
 }
