--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "server": "npm run start --prefix api",
-    "dev": "concurrently \"npm run server\" \"npm start\""
+    "dev": "concurrently \"npm run server\" \"npm start\"",
+    "install": "npm i && npm i --prefix api"
   },
   "eslintConfig": {
     "extends": [
@@ -46,8 +47,7 @@
     ]
   },
   "devDependencies": {
-    "concurrently": "^7.0.0",
-    "json-server": "^0.17.0"
+    "concurrently": "^7.0.0"
   },
   "proxy": "http://localhost:5000"
 }
